Remove page gap, default left right padding to 0 for child elements and fix elpisis

--- a/web-frontend/modules/core/assets/scss/components/dropdown.scss
+++ b/web-frontend/modules/core/assets/scss/components/dropdown.scss
@@ -98,6 +98,8 @@
 }
 
 .dropdown__selected-placeholder {
+  @extend %ellipsis;
+
   color: $palette-neutral-700;
 }
 
